feat: add cv img and its style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="columns">
         <div class="left-colum">
           <header class="header">
+            <img src="img/cv-photo.jpg" alt="CV Photo" width="200" height="200">
             <h1>Otabek Tuychiev</h1>
             <h2>Software Developer</h2>
           </header>
