refactor: remove tel number and add github link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       <div class="columns">
         <div class="left-colum">
           <header class="header">
-            <img src="img/cv-photo.jpg" alt="CV Photo" width="200" height="200">
+            <img
+              src="img/cv-photo.jpg"
+              alt="CV Photo"
+              width="200"
+              height="200"
+            />
             <h1>Otabek Tuychiev</h1>
             <h2>Software Developer</h2>
           </header>
@@ -29,10 +34,6 @@
             <section class="contacts">
               <h3>Contacts</h3>
               <ul>
-                <li>
-                  <i class="ri-phone-fill"></i>
-                  <a href="tel:+998909963872">+998 (90) 996-38-72</a>
-                </li>
                 <li>
                   <i class="ri-mail-fill"></i>
                   <a href="mailto:otabek996996@gmail.com"
@@ -47,8 +48,12 @@
                   <i class="ri-linkedin-box-fill"></i>
                   <a
                     href="https://www.linkedin.com/in/otabek-tuychiev-0179b2226/"
-                    >LinkedIn</a
+                    >Otabek Tuychiev</a
                   >
+                </li>
+                <li>
+                  <i class="ri-github-fill"></i>
+                  <a href="https://github.com/Otabek996">Otabek996</a>
                 </li>
               </ul>
             </section>
