--- a/index.html
+++ b/index.html
@@ -61,17 +61,12 @@
             <section class="skills">
               <h3>Skills</h3>
               <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Sass</li>
-                <li>Bootstrap</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Vue (Basics)</li>
-                <li>Git</li>
-                <li>GitHub, GitLab</li>
+                <li>HTML5</li>
+                <li>CSS3, Sass, Bootstrap 5</li>
+                <li>JavaScript, React, Redux, Vue (Basics)</li>
+                <li>Git, GitHub, GitLab, Netlify</li>
                 <li>VS Code</li>
-                <li>Figma</li>
+                <li>Adobe Photoshop, Figma, Pixso</li>
               </ul>
             </section>
 
