refactor: change about me text

--- a/index.html
+++ b/index.html
@@ -97,19 +97,15 @@
               <h3>About me</h3>
             </div>
             <p>
-              My name is Otabek Tuychiev, and my goal is to become a programmer.
-              Although I have no work experience in this field, I am full of
-              determination to learn and discover new things. I possess strong
-              analytical abilities, attention to detail, and the capability to
-              solve complex problems.
-            </p>
-            <p>
+              Software developer with a strong determination to learn and
+              discover new things. I possess strong analytical abilities,
+              attention to detail, and the capability to solve complex problems.
+              <br />
               Through self-study, I have learned the basics of programming in
               JavaScript, and I have familiarized myself with the fundamental
               principles of software development. I am actively learning new
               technologies and eager to apply my knowledge in practice.
-            </p>
-            <p>
+              <br />
               My main priorities are continuous development and improvement of
               my skills, as well as participation in interesting and challenging
               projects. I am confident that my motivation and willingness to
