refactor: change education structure

--- a/index.html
+++ b/index.html
@@ -120,12 +120,14 @@
               <h3>Education</h3>
             </div>
             <p><strong>Tashkent Institute of Chemical Technology</strong></p>
-            <p>Faculty of Food Technology</p>
-            <p><em>Years:</em> 2020 - 2024</p>
+            <p><em>Location:</em> Tashkent, Uzbekistan</p>
+            <p><em>Faculty:</em> Faculty of Food Technology</p>
+            <p><em>Years:</em> Oct 2020 - June 2024</p>
             <p>
               <em>Specialization:</em> Food Production Technologist, Bachelor’s
               degree
             </p>
+            <p><em>Academic score:</em> GPA 3.75</p>
           </section>
 
           <section class="internships">
