refactor: change intern to experience

--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
             </p>
           </section>
 
+          <section class="experience">
+            <div class="sub-header">
+              <i class="ri-id-card-fill"></i>
+              <h3>Experience</h3>
+            </div>
+            <p><strong>Itransition</strong></p>
+            <p><em>Intern Commercial Software Development — JavaScript</em>, remote</p>
+            <p>April 2024 - June 2024</p>
+            <a href="https://drive.google.com/file/d/1ZSl4gWn1V-bKm1I_m5_C94Nj8WWlr62w/view?usp=drive_link">Certificate</a>
+          </section>
+
           <section class="education">
             <div class="sub-header">
               <i class="ri-graduation-cap-fill"></i>
@@ -128,17 +139,6 @@
               degree
             </p>
             <p><em>Academic score:</em> GPA 3.75</p>
-          </section>
-
-          <section class="internships">
-            <div class="sub-header">
-              <i class="ri-book-2-fill"></i>
-              <h3>Internships</h3>
-            </div>
-            <p><strong>Itransition</strong></p>
-            <p>Commercial Software Development — JavaScript</p>
-            <p><em>Period:</em> April, 2024 - June, 2024</p>
-            <p><em>Specialization:</em> Frontend Developer</p>
           </section>
 
           <section class="courses">
