refactor: change courses section text

--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
               <h3>Courses</h3>
             </div>
             <p><strong>RS School</strong></p>
-            <p>JavaScript/Frontend Pre-School</p>
-            <p><em>Period:</em> June, 2024 - Present</p>
-            <p><em>Specialization:</em> Frontend Developer</p>
+            <p><em>JavaScript/Frontend Pre-School</em></p>
+            <p><em>Period:</em> June 2024 - Present</p>
           </section>
 
           <section class="code-example">
