refactor: change code example title to code sample

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <section class="code-example">
             <div class="sub-header">
               <i class="ri-code-view"></i>
-              <h3>Code example</h3>
+              <h3>Code Sample</h3>
             </div>
             <p>
               <strong>Fibonacci Number:</strong> The Fibonacci numbers, commonly
