refactor: change code example class to code sample

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <p><em>Period:</em> June 2024 - Present</p>
           </section>
 
-          <section class="code-example">
+          <section class="code-sample">
             <div class="sub-header">
               <i class="ri-code-view"></i>
               <h3>Code Sample</h3>
