refactor: add class certificate-link

--- a/index.html
+++ b/index.html
@@ -120,9 +120,16 @@
               <h3>Experience</h3>
             </div>
             <p><strong>Itransition</strong></p>
-            <p><em>Intern Commercial Software Development — JavaScript</em>, remote</p>
+            <p>
+              <em>Intern Commercial Software Development — JavaScript</em>,
+              remote
+            </p>
             <p>April 2024 - June 2024</p>
-            <a href="https://drive.google.com/file/d/1ZSl4gWn1V-bKm1I_m5_C94Nj8WWlr62w/view?usp=drive_link">Certificate</a>
+            <a
+              class="certificate-link"
+              href="https://drive.google.com/file/d/1ZSl4gWn1V-bKm1I_m5_C94Nj8WWlr62w/view?usp=drive_link"
+              >Certificate</a
+            >
           </section>
 
           <section class="education">
