feat: add projects section

--- a/index.html
+++ b/index.html
@@ -132,6 +132,115 @@
             >
           </section>
 
+          <section class="projects">
+            <div class="sub-header">
+              <i class="ri-terminal-window-line"></i>
+              <h3>Projects</h3>
+            </div>
+            <p><em>Software developer</em></p>
+            <p><em>June 2023 - June 2024</em></p>
+            <ul>
+              <li>
+                <p>
+                  <strong>Portfolio</strong> - personal portfolio website with
+                  projects and resume pages.
+                </p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Code: </em
+                  ><a href="https://github.com/Otabek996/responsive-to-website"
+                    >GitHub</a
+                  >
+                </p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Live demo: </em
+                  ><a href="https://otabek996.github.io/responsive-to-website/"
+                    >TO</a
+                  >
+                </p>
+              </li>
+              <li class="website-category">
+                <p><em>Build with: </em>React</p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Features: </em>React site, dark and light mode, responsive
+                  design
+                </p>
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                <p>
+                  <strong>Weather Forecast</strong> - see the current weather
+                  conditions from around the world, including temperature (in
+                  Celsius or Fahrenheit), UV index, humidity, visibility, wind
+                  speed, air quality, sunrise and sunset times, and local time.
+                </p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Code: </em
+                  ><a
+                    href="https://github.com/Otabek996/responsive-weather-website"
+                    >GitHub</a
+                  >
+                </p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Live demo: </em
+                  ><a
+                    href="https://otabek996.github.io/responsive-weather-website/"
+                    >Weather</a
+                  >
+                </p>
+              </li>
+              <li class="website-category">
+                <p><em>Build with: </em>Vue</p>
+              </li>
+              <li class="website-category">
+                <p><em>Features: </em>Vue site, responsive design</p>
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                <p>
+                  <strong>3D Space</strong> - 3d space website with parallax effect.
+                </p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Code: </em
+                  ><a href="https://github.com/Otabek996/3d-space-website"
+                    >GitHub</a
+                  >
+                </p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Live demo: </em
+                  ><a href="https://otabek996.github.io/3d-space-website/"
+                    >Space</a
+                  >
+                </p>
+              </li>
+              <li class="website-category">
+                <p><em>Build with: </em>HTML5, CSS3, JavaScript</p>
+              </li>
+              <li class="website-category">
+                <p>
+                  <em>Features: </em>Parallax effect
+                </p>
+              </li>
+            </ul>
+          </section>
+
           <section class="education">
             <div class="sub-header">
               <i class="ri-graduation-cap-fill"></i>
