fix: remove slash

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- === REMIX ICON === -->
     <link
@@ -100,12 +100,12 @@
               Software developer with a strong determination to learn and
               discover new things. I possess strong analytical abilities,
               attention to detail, and the capability to solve complex problems.
-              <br>
+              <br />
               Through self-study, I have learned the basics of programming in
               JavaScript, and I have familiarized myself with the fundamental
               principles of software development. I am actively learning new
               technologies and eager to apply my knowledge in practice.
-              <br>
+              <br />
               My main priorities are continuous development and improvement of
               my skills, as well as participation in interesting and challenging
               projects. I am confident that my motivation and willingness to
@@ -211,7 +211,8 @@
             <ul>
               <li>
                 <p>
-                  <strong>3D Space</strong> - 3d space website with parallax effect.
+                  <strong>3D Space</strong> - 3d space website with parallax
+                  effect.
                 </p>
               </li>
               <li class="website-category">
@@ -234,9 +235,7 @@
                 <p><em>Build with: </em>HTML5, CSS3, JavaScript</p>
               </li>
               <li class="website-category">
-                <p>
-                  <em>Features: </em>Parallax effect
-                </p>
+                <p><em>Features: </em>Parallax effect</p>
               </li>
             </ul>
           </section>
@@ -277,9 +276,9 @@
               denoted <code>F(n)</code> form a sequence, called the Fibonacci
               sequence, such that each number is the sum of the two preceding
               ones, starting from <code>0</code> and <code>1</code>. That is,
-              <br><code>F(0) = 0, F(1) = 1</code> <br><code
+              <br /><code>F(0) = 0, F(1) = 1</code> <br /><code
                 >F(n) = F(n - 1) + F(n - 2), for n > 1</code
-              >. <br>Given <code>n</code>, calculate <code>F(n)</code>.
+              >. <br />Given <code>n</code>, calculate <code>F(n)</code>.
             </p>
             <pre>
                     <code>
@@ -311,7 +310,9 @@
       </footer>
     </div>
 
-    <button type="button" class="button-download" id="download-pdf">Download CV</button>
+    <button type="button" class="button-download" id="download-pdf">
+      Download CV
+    </button>
 
     <!-- === Loading the html2pdf library === -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
