fix: remove slash

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- === REMIX ICON === -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
 
     <!-- === CSS === -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css">
 
     <title>CV</title>
   </head>
@@ -24,8 +23,7 @@
               src="img/cv-photo.jpg"
               alt="CV Photo"
               width="200"
-              height="200"
-            />
+              height="200">
             <h1>Otabek Tuychiev</h1>
             <h2>Software Developer</h2>
           </header>
@@ -100,12 +98,12 @@
               Software developer with a strong determination to learn and
               discover new things. I possess strong analytical abilities,
               attention to detail, and the capability to solve complex problems.
-              <br />
+              <br>
               Through self-study, I have learned the basics of programming in
               JavaScript, and I have familiarized myself with the fundamental
               principles of software development. I am actively learning new
               technologies and eager to apply my knowledge in practice.
-              <br />
+              <br>
               My main priorities are continuous development and improvement of
               my skills, as well as participation in interesting and challenging
               projects. I am confident that my motivation and willingness to
@@ -276,9 +274,9 @@
               denoted <code>F(n)</code> form a sequence, called the Fibonacci
               sequence, such that each number is the sum of the two preceding
               ones, starting from <code>0</code> and <code>1</code>. That is,
-              <br /><code>F(0) = 0, F(1) = 1</code> <br /><code
+              <br><code>F(0) = 0, F(1) = 1</code> <br><code
                 >F(n) = F(n - 1) + F(n - 2), for n > 1</code
-              >. <br />Given <code>n</code>, calculate <code>F(n)</code>.
+              >. <br>Given <code>n</code>, calculate <code>F(n)</code>.
             </p>
             <pre>
                     <code>
@@ -304,8 +302,7 @@
             src="./icons/rsschool.svg"
             alt="RS School"
             width="73"
-            height="26"
-          />
+            height="26">
         </a>
       </footer>
     </div>
