feat: add text to footer links

--- a/index.html
+++ b/index.html
@@ -291,13 +291,15 @@
       </div>
 
       <footer>
-        <a href="https://github.com/Otabek996">
+        <a class="github-link" href="https://github.com/Otabek996">
+          <p>GitHub</p>
           <i class="ri-github-fill"></i>
         </a>
 
         <p>© 2024</p>
 
         <a href="https://rs.school/js/">
+          <p style="display: none;">School website</p>
           <img
             src="./icons/rsschool.svg"
             alt="RS School"
