fix: replace > to &gt;

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               sequence, such that each number is the sum of the two preceding
               ones, starting from <code>0</code> and <code>1</code>. That is,
               <br><code>F(0) = 0, F(1) = 1</code> <br><code
-                >F(n) = F(n - 1) + F(n - 2), for n > 1</code
+                >F(n) = F(n - 1) + F(n - 2), for n &gt; 1</code
               >. <br>Given <code>n</code>, calculate <code>F(n)</code>.
             </p>
             <pre>
